bug resolved - related to autowired annotation